🧪 Add comprehensive E2E test suite with Playwright
- Created FEATURES.md: Complete feature inventory (810 templates, 28 API endpoints, 14 event types)
- Created WORKFLOW_REVIEW.md: Detailed workflow documentation for each feature
- Added 6 Playwright test specs covering all major workflows:
  * 01-auth: Login, logout, session persistence, protected routes
  * 02-patient-management: Dashboard, search, walk-in registration
  * 03-timeline: 3-column interface, event creation, clinical logging
  * 04-templates: Template system (810 total), variable substitution
  * 05-protocols: Protocol schedules, action series generation
  * 06-acronyms: Medical acronym expansion
- Added playwright.config.js with auto-start servers
- Added test_all.sh script for automated testing
- Installed @playwright/test

Ready for comprehensive E2E testing before release

--- a/package.json
+++ b/package.json
@@ -12,12 +12,22 @@
     "dev:frontend": "cd frontend && npm run dev",
     "migrate": "cd backend && npx prisma migrate deploy",
     "seed": "cd backend && npx prisma db seed",
-    "setup": "npm run install:all && npm run migrate && npm run seed"
+    "setup": "npm run install:all && npm run migrate && npm run seed",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:report": "playwright show-report",
+    "test:all": "bash scripts/test_all.sh"
   },
-  "keywords": ["ivf", "clinic", "healthcare", "timeline"],
+  "keywords": [
+    "ivf",
+    "clinic",
+    "healthcare",
+    "timeline"
+  ],
   "author": "Santaan Team",
   "license": "MIT",
   "devDependencies": {
+    "@playwright/test": "^1.58.1",
     "concurrently": "^8.2.2"
   },
   "dependencies": {
