Update frontend service name to actions-santaan for custom URL

--- a/render.yaml
+++ b/render.yaml
@@ -25,7 +25,7 @@ services:
 
   # Frontend (Static Site)
   - type: web
-    name: santaan-frontend
+    name: actions-santaan
     runtime: static
     branch: main
     buildCommand: cd frontend && npm ci && npm run build
