--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   # Backend API
   - type: web
-    name: santaan-backend
+    name: actions-santaan
     runtime: node
     region: oregon
     plan: free
