--- a/render.yaml
+++ b/render.yaml
@@ -25,8 +25,9 @@ services:
 
   # Frontend (Static Site)
   - type: web
-    name: actions-santaan
+    name: santaan-frontend
     runtime: static
+    plan: free
     branch: main
     buildCommand: cd frontend && npm ci && npm run build
     staticPublishPath: ./frontend/dist
