Fix: Use correct backend URL santaan-backend.onrender.com

--- a/.env.render.example
+++ b/.env.render.example
@@ -2,7 +2,7 @@
 # Copy these values to Render Dashboard → Service → Environment
 
 # ====================
-# BACKEND ENVIRONMENT
+# BACKEND ENVIRONMENT (santaan-backend service)
 # ====================
 
 # Node Environment
@@ -23,11 +23,11 @@ JWT_SECRET=your-super-secret-jwt-key-min-32-characters-long
 CORS_ORIGIN=https://santaan-frontend.onrender.com
 
 # ====================
-# FRONTEND ENVIRONMENT
+# FRONTEND ENVIRONMENT (santaan-frontend service)
 # ====================
 
 # Backend API URL (Your backend URL on Render)
-VITE_API_URL=https://actions-santaan.onrender.com
+VITE_API_URL=https://santaan-backend.onrender.com
 
 # ====================
 # OPTIONAL SETTINGS
