Fix frontend API URL to include /api endpoint

--- a/render.yaml
+++ b/render.yaml
@@ -37,7 +37,7 @@ services:
         destination: /index.html
     envVars:
       - key: VITE_API_URL
-        value: https://santaan-backend.onrender.com
+        value: https://santaan-backend.onrender.com/api
 
 databases:
   - name: santaan-db
